fix misalignment

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -140,7 +140,9 @@
 			padding-left: 26px;
 		}
 		@include break-huge {
-			padding-left: 64px;
+			&:first-child {
+				padding-left: 64px;
+			}
 		}
 		&:nth-child(2) {
 			white-space: wrap;
